[package]
name = "asymmetric_spl"
version = "1.0.0"
description = "PDA-based transfer gatekeeper for Solana DeFi stress simulation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asymmetric_spl"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0.0"
anchor-spl = "1.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
